fix: support Keycloak 26.3.1 and resolve API changes
- Updated Keycloak version to 26.3.1
- Fixed build issues related to sendError method signature
- Updated instanceof checks and replaced legacy APIs (e.g., toList, var usage)
- Minor refactoring for clarity and compatibility

Builds successfully with Keycloak 26.3.1